# jax-dbt

./: .gitignore  dbt_project.yml  dependencies.yml  profiles.yml  pyproject.toml
.github/workflows/: DAILY_SCHEDULE.yaml
macros/: validate_phone_number.sql
models/marts/education/: fct_dotb__gradebook.sql  fct_dotb__gradebook.yml
models/marts/marketing/: fct__leads.sql  fct__leads.yml  fct_fb__ad_conversions.sql  fct_fb__revenue_conversions.sql  fct_fb__revenue_conversions.yml
models/marts/sales/: fct__conversions.sql  fct__lead_funnel.sql  fct__revenue.sql
models/staging/dotb/: _dotb__source.yml  stg_dotb__attendance.sql  stg_dotb__attendance.yml  stg_dotb__attendence.sql  stg_dotb__calls.sql  stg_dotb__calls.yml  stg_dotb__centers.sql  stg_dotb__centers.yml  stg_dotb__classes.sql  stg_dotb__classes.yml  stg_dotb__courses.sql  stg_dotb__courses.yml  stg_dotb__gradebook.sql  stg_dotb__gradebook.yml  stg_dotb__kind_of_course.sql  stg_dotb__kind_of_course.yml  stg_dotb__leads.sql  stg_dotb__leads.yml  stg_dotb__leads_audit.sql  stg_dotb__leads_audit.yml  stg_dotb__meetings.sql  stg_dotb__meetings.yml  stg_dotb__students.sql  stg_dotb__students.yml  stg_dotb__tasks.sql  stg_dotb__transaction_details.sql  stg_dotb__transactions.sql  stg_dotb__transactions.yml
models/staging/google_ads/: _googleAds__sources.yml  stg_googleads__ad_group_cross_device_stats.sql  stg_googleads__ad_group_stats.sql  stg_googleads__campaign_conversion_stats.sql  stg_googleads__campaign_stats.sql  stg_googleads__shopping_product_stats.sql
models/utilities/: dim__calendar.sql
(+10 files in other folders)
