[tool.poetry]
name = "jax-analytics"
version = "0.1.0"
description = ""
authors = ["Chien Le <lchien063@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.6.6"
dbt-bigquery = "1.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
